# devicesync

./: .gitignore  CMakeLists.txt  Mainpage.dox
doc/: CMakeLists.txt  index.docbook
src/: CMakeLists.txt  ConnectDialog.cpp  ConnectDialog.h  Messages.sh  ProgressDialog.cpp  ProgressDialog.h  connectdialog.ui  devicesync.cpp  devicesync.desktop  devicesync.h  devicesync.kcfg  devicesyncui.rc  devicesyncview.cpp  devicesyncview.h  devicesyncview_base.ui  forceconnectdialog.ui  main.cpp  prefs_base.ui  progressdialog.ui  settings.kcfgc
src/core/: AbstractDevice.cpp  AbstractDevice.h  AbstractDeviceInterface.cpp  AbstractDeviceInterface.h  CMakeLists.txt  ProgressInterface.cpp  ProgressInterface.h  QueueManager.cpp  QueueManager.h  devicesync_plugin.desktop
src/plugins/: CMakeLists.txt
src/plugins/localstorage/: CMakeLists.txt  LocalStorage.cpp  LocalStorage.h  LocalStorageDevice.cpp  LocalStorageDevice.h  devicesync_localstorage.desktop
src/plugins/mtp/: CMakeLists.txt  MtpDevice.cpp  MtpDevice.h  MtpInterface.cpp  MtpInterface.h  devicesync_mtp.desktop
